global: fix horizontal overflow issue

--- a/gitlab.user.styl
+++ b/gitlab.user.styl
@@ -113,6 +113,8 @@
             --cyan      : cyan;
             --green     : green;
         }
+        /// Prevents horizontal overflow. @upstream
+        overflow-x: hidden;
     }
 
     // Overwrite existing Stylus-lang vars with CSS vars.
